# Copyright 2001,2002,2003,2004 Sun Microsystems, Inc.
# All Rights Reserved.  Use is subject to license terms.
# 
# See the file "license.terms" for information on usage and
# redistribution of this file, and for a DISCLAIMER OF ALL 
# WARRANTIES.
#

Change history for FreeTTS.
--------------------------

May 10, 2004 Release 1.2
    - Fix problem where the space character in the path would cause
      issues with finding voice jars (bug 938225)
    - Added backwards compatibility for Gnome Speech API
    - Fix to kill audio output thread on deallocate from JSAPI (bug 922579)
    - Added "@" and "?" to list of known characters for German.
    - Fixed problem where some jar files in the FreeTTS directory
      would cause issues with discovering voices.
    - Added defaultAudioPlayer property to voice (RFE 922580).

December 22, 2003 Release 1.2beta
    - Many documentation updates to prep for beta release.

November 22, 2003 Release 1.2beta
    - Abandon GNUMake in favor of Ant.
    - Many documentation updates.
    - Add capability to set the AudioPlayer on a JSAPI Voice. 

September 3, 2003 Release 1.2beta
    - Modified MBROLA output to work on Solaris and Mac

August 15, 2003 Release 1.2beta
    - Added support to import voices from FestVox into FreeTTS
    - Extended voice packaging scheme to simplify management and addition
      of new voices.
    - VoiceManager class provices API to access voices.
    - Dynamic detection of voice jarfiles is supported.

Jun 5, 2003 Release 1.2beta
    - Updated FreeTTS version message

Jun 4, 2003 Release 1.2beta
    - Imported changes from Flite 1.2:
        - Regenerated cmulex_addenda, cart_dump
        - Reads year "1200" as "twelve hundred" rather than "twelve oh
          zero"
        - TimeUtils reads 00:01 as "just after midnight" rather than
          "just after midnight, in the morning".
        - Added "daughter1" to be an alias for "daughter"
        - Minor bug fixes in TokenToWords and ClusterUnitSelector