@@ -52,3 +52,4 @@ inn	ih n
 ton	t ax 
 _an	ey 
 cepstraln	k eh1 p s t r ax l 
+freettsn	f r iy1 t iy t iy eh s
